package TFA.vista;

import TFA.vista.NBAView;
import TFA.modelo.NBAModel;

public class PruebasVista {
    public static void main(String[] args) {
        NBAView view = new NBAView();
        view.display();
    }
}
