package modelo;

public class Player {
    // Datos Generales del Jugador (StrategyPlayer)
    private int id;
    private String name;
    private String position;
    private int number;
}
