package modelo;

public enum Result {
    WIN,
    LOSE,
}
