@startuml

title __TFA-DAP's Class Diagram__\n

  namespace TFA {
    class TFA.Client {
    }
  }
  

  namespace TFA {
    namespace controlador {
      class TFA.controlador.NBAController {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.NBAModel {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.Player {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.PruebaModel {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      enum Result {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      class TFA.modelo.Team {
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        abstract class TFA.modelo.datafinder.DataFetcherStrategy {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.PruebaDataFetcher {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyContext {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyGames {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyPlayer {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeam {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamPlayers {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamStandings {
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamStats {
        }
      }
    }
  }
  

  namespace TFA {
    namespace vista {
      class TFA.vista.NBAView {
      }
    }
  }
  

  namespace TFA {
    namespace vista {
      class TFA.vista.PruebasVista {
      }
    }
  }
  

  TFA.controlador.NBAController o-- TFA.modelo.NBAModel : model
  TFA.controlador.NBAController o-- TFA.modelo.Team : teamToDisplay
  TFA.controlador.NBAController o-- TFA.vista.NBAView : view
  TFA.modelo.NBAModel o-- TFA.modelo.datafinder.StrategyContext : strategyContext
  TFA.modelo.datafinder.StrategyContext o-- TFA.modelo.datafinder.DataFetcherStrategy : strategy
  TFA.modelo.datafinder.StrategyGames -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyPlayer -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeam -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamPlayers -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamStandings -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamStats -up-|> TFA.modelo.datafinder.DataFetcherStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
